cmake_minimum_required(VERSION 3.0.0)
project(HTTP_proxy VERSION 1.0.0)
find_package("wxWidgets" REQUIRED core net)
include("${wxWidgets_USE_FILE}")
add_executable(main "${PROJECT_SOURCE_DIR}/src/app.cpp")
foreach(LIB app frame server http)
 message("${PROJECT_SOURCE_DIR}/include/")
 add_library(${LIB} "${PROJECT_SOURCE_DIR}/src/${LIB}.cpp")
 target_include_directories("${LIB}" PUBLIC "${PROJECT_SOURCE_DIR}/include/" "${wxWidgets_INCLUDE_DIRS}")
 target_link_libraries(main "${LIB}")
endforeach()
target_link_libraries(main "${wxWidgets_LIBRARIES}")
